<resources>
    <string name="app_name" translatable="false">Mais Barato</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="lembrar_login">Lembrar usuário e senha?</string>
    <string name="entrar">ENTRAR</string>
    <string name="esqueci_a_senha">Esqueci a senha</string>
    <string name="criar_conta">Criar conta</string>
    <string name="favoritos">Favoritos</string>
    <string name="notifica_es">Notificações</string>
    <string name="hist_rico">Histórico</string>
    <string name="fale_conosco">Fale conosco</string>
    <string name="sair">Sair</string>
    <string name="botao_favorito">botão favorito</string>
    <string name="botao_comentario">botão comentário</string>
    <string name="estabelecimentos">Estabelecimentos</string>
    <string name="estabelecimento">Estabelecimento</string>
    <string name="cancelar">Cancelar</string>
    <string name="selecionar">Selecionar</string>
    <string name="min_10_caracteres">Mínimo 10 caracteres</string>
    <string name="min_3_caracteres">Mínimo 3 caracteres</string>
    <string name="digite_titulo">Digite um título</string>
    <string name="selecione_estabelecimento">Digite o nome do estabelecimento</string>
    <string name="endereco_estabelecimento">Digite o endereço ou site</string>
    <string name="digite_preco_atual">Digite o preço atual</string>
    <string name="digite_detalhes">Digite os detalhes da oferta</string>
    <string name="preencha_email">Preencha o e-mail</string>
    <string name="preencha_senha">Preencha a senha</string>
    <string name="falha_autenticacao">Falha na autenticação</string>
    <string name="usuario_senha_invalidos">Usuário e/ou senha inválido</string>
    <string name="senha_invalida">Senha inválido</string>
    <string name="adicionar_imagem">Adicionar imagem</string>
    <string name="trocar_imagens">Trocar imagens</string>
    <string name="adicione_no_minimo_uma_imagem">Adicione no mínimo uma imagem</string>
    <string name="titulo">Título</string>
    <string name="nome_estabelecimento">Nome do estabelecimento</string>
    <string name="preco_antigo">Preço antigo</string>
    <string name="preco_novo">Preço novo</string>
    <string name="informacoes_adicionais">Informações adicionais</string>
    <string name="salvar">Salvar</string>
    <string name="digite_nome_completo">Digite seu nome completo</string>
    <string name="email_invalido">Email inválido</string>
    <string name="email_verificacao_enviado">E-mail de verificação enviado para </string>
    <string name="falha_enviar_email_verificacao">Falha ao enviar e-mail de verificação</string>
    <string name="alterar_foto">Alterar foto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="atualizar">Atualizar</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="imagem_usuario">Imagem usuário</string>
    <string name="icone_alterar_imagem">Icone alterar imagem</string>
    <string name="alterar_imagem">Alterar imagem</string>
    <string name="telefone">Telefone</string>
    <string name="falha_atualizacao_user">Falhar ao atualizar informações</string>
    <string name="falha_salvar_favorito">Falha ao salvar favorito</string>
    <string name="adicionar_aos_favoritos">Adicionar aos favoritos</string>
    <string name="remover_dos_favoritos">Remover dos favoritos</string>
    <string name="falha_carregar_favoritos">Falha ao carregar favoritos</string>
    <string name="endereco_ou_site_do_estabelecimento">Endereço, local ou site</string>
    <string name="detalhes">Detalhes</string>
    <string name="enviado_por">Enviado por</string>
    <string name="comentarios">Comentários</string>
    <string name="excluir">Excluir</string>
    <string name="acessado_em">Acessado em: \n %1$s</string>
</resources>