<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.DetalhesOfertaFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_imagens"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <TextView
                android:id="@+id/data_inclusao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:textSize="12sp"
                android:layout_marginStart="12dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="31/12/2021" />

            <TextView
                android:id="@+id/titulo_promocao"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="18dp"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/preco_novo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/data_inclusao"
                tools:text="Titulo da promocao" />

            <TextView
                android:id="@+id/nome_loja"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/preco_novo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titulo_promocao"
                tools:text="Nome da loja" />

            <TextView
                android:id="@+id/preco_antigo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="18dp"
                android:layout_marginTop="15dp"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/data_inclusao"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="R$ 199,99" />

            <TextView
                android:id="@+id/preco_novo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="18dp"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/preco_antigo"
                tools:text="R$ 99,99" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/botao_adicionar_favoritos"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/adicionar_aos_favoritos"
                app:icon="@drawable/ic_favorite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nome_loja" />

            <View
                android:id="@+id/divisao_estabelecimento"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/cinza"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/botao_adicionar_favoritos" />

            <TextView
                android:id="@+id/label_estabelecimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="12dp"
                android:text="@string/estabelecimento"
                android:textStyle="bold"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/divisao_estabelecimento"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/label_estabelecimento_subtitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/endereco_ou_site_do_estabelecimento"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/label_estabelecimento"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/endereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                tools:text="Endereço"
                android:textSize="12sp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/label_estabelecimento_subtitulo"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:id="@+id/divisao_detalhes"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/cinza"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/endereco" />

            <TextView
                android:id="@+id/label_detalhes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detalhes"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginStart="12dp"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/divisao_detalhes"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/descricao_oferta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                tools:text="Alguma descrição importante"
                app:layout_constraintTop_toBottomOf="@id/label_detalhes"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:id="@+id/divisao_usuario"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/cinza"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/descricao_oferta" />

            <TextView
                android:id="@+id/label_enviado_por"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enviado_por"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginStart="12dp"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/divisao_usuario"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_foto_usuario"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="12dp"
                app:cardCornerRadius="50dp"
                app:layout_constraintTop_toBottomOf="@id/label_enviado_por"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:id="@+id/foto_usuario"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:importantForAccessibility="no"
                    tools:src="@tools:sample/backgrounds/scenic" />

            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/nome_usuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Nome do usuário"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@id/cv_foto_usuario"
                app:layout_constraintTop_toTopOf="@id/cv_foto_usuario"
                app:layout_constraintBottom_toBottomOf="@id/cv_foto_usuario" />

            <View
                android:id="@+id/divisao_comentarios"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/cinza"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/cv_foto_usuario" />

            <TextView
                android:id="@+id/label_comentario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/comentarios"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginStart="12dp"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/divisao_comentarios"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_comentario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/comentario_item"
                app:layout_constraintTop_toBottomOf="@id/label_comentario"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</androidx.core.widget.NestedScrollView>


